# GunGaleOnline

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml
src/gungaleonline/: __init__.py  bullet.py  cmdline.py  config.py  counter.py  hud.py  main.py  map.py  menu.py  player.py  scene.py  shadow_caster.py
tests/: conftest.py  test_cmdline.py  test_counter.py  test_version.py
