[tool.poetry]
name = "gungaleonline"
version = "0.1.0"
description = "My Awesome Project!"
readme = "README.md"
authors = ["BlackishGreen33 <s5460703@gmail.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
pygame-ce = "^2.5.5"
shapely = "^2.0.7"
scipy = "^1.16.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"
isort = "^6.0.1"
pytest = "^8.4.1"
tox = "^4.28.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.17"
pytest-pylint = "^0.21.0"
pre-commit = "^4.2.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[tool.pylint.design]
max-line-length = 120
